Fix a duplicate event (click/mouseover) on the mobile screen Fix misaligned dockbar icon

--- a/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
+++ b/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
@@ -1082,6 +1082,10 @@ $breakpoint_tablet: 979px;
 			display:inline-block !important;
 			width:auto;
 		}
+		.icon-toggle-dockbar{
+			margin-top: 20px!important;
+			float:left;
+		}
 		.icon-toggle-menu {
 		    display: block; 
 			width: 40px;
@@ -1110,6 +1114,8 @@ $breakpoint_tablet: 979px;
 		}
 		#nav{
 			display: none; 
+		  	background:#fff;	
+		  	opacity: 0.92;
 		}
 		.navbar-inverse .navbar-collapse {
 			border: none;
